--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,9 @@ matrix:
 before_script:
 - export PATH="$HOME/.composer/vendor/bin:$PATH"
 - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-- composer global require "phpunit/phpunit=4.8.*|5.7.*"
 - composer install
 script:
-- phpunit
+- composer test
 after_success:
 - curl -L https://raw.githubusercontent.com/fumikito/wp-readme/master/wp-readme.php | php
 - sed -i -e "s/nightly/${TRAVIS_TAG}/" $(basename $TRAVIS_REPO_SLUG).php
