--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ env:
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=5.0 WP_MULTISITE=0
 matrix:
-  includes:
+  include:
     - php: 7.0
       env: WP_VERSION=latest WP_MULTISITE=0 WP_PLUGIN_DEPLOY=1
 before_script:
