--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,26 @@
         }
     ],
     "scripts": {
-        "test": "phpunit"
+        "test": "phpunit",
+        "lint": [
+            "phpcs --config-set installed_paths $(pwd)/vendor/wp-coding-standards/wpcs",
+            "phpcs --standard=phpcs.ruleset.xml $(find ./ -name '*.php')"
+        ],
+        "fix": [
+            "phpcs --config-set installed_paths $(pwd)/vendor/wp-coding-standards/wpcs",
+            "phpcbf --standard=phpcs.ruleset.xml $(find ./ -name '*.php')"
+        ]
+
     },
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "php": "^7|^8"
+    },
     "require-dev": {
-        "phpunit/phpunit": "^6"
+        "phpunit/phpunit": "^6|^7",
+        "squizlabs/php_codesniffer": "^3.0",
+        "wp-coding-standards/wpcs": "^2.0",
+        "yoast/phpunit-polyfills": "^1.0"
     },
     "autoload": {
         "psr-0": {
