--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "php": "^7|^8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6|^7",
+        "phpunit/phpunit": "^6|^7|^9",
         "squizlabs/php_codesniffer": "^3.0",
         "wp-coding-standards/wpcs": "^2.0",
         "yoast/phpunit-polyfills": "^1.0"
