--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,16 @@
         {
             "name": "fumikito",
             "email": "fumikito@kunoichiwp.com"
+        },
+        {
+            "name": "Tarosky",
+            "email": "hi@tarosky.co.jp"
         }
     ],
     "scripts": {
         "test": "phpunit",
-        "lint": [
-            "phpcs --config-set installed_paths $(pwd)/vendor/wp-coding-standards/wpcs",
-            "phpcs --standard=phpcs.ruleset.xml $(find ./ -name '*.php')"
-        ],
-        "fix": [
-            "phpcs --config-set installed_paths $(pwd)/vendor/wp-coding-standards/wpcs",
-            "phpcbf --standard=phpcs.ruleset.xml $(find ./ -name '*.php')"
-        ]
+        "lint": "phpcs --standard=phpcs.ruleset.xml $(find ./ -name '*.php')",
+        "fix": "phpcbf --standard=phpcs.ruleset.xml $(find ./ -name '*.php')"
 
     },
     "minimum-stability": "stable",
@@ -26,14 +24,18 @@
         "php": "^7|^8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6|^7",
-        "squizlabs/php_codesniffer": "^3.0",
-        "wp-coding-standards/wpcs": "^2.0",
-        "yoast/phpunit-polyfills": "^1.0"
+        "phpunit/phpunit": "^6|^7|^8|^9",
+        "wp-coding-standards/wpcs": "^3.0",
+        "yoast/phpunit-polyfills": "^2.0"
     },
     "autoload": {
         "psr-0": {
             "Kunoichi\\Hagakure": "src"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     }
 }
